--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "node --env-file=.env node_modules/.bin/nest start --watch",
+    "start:debug": "node --env-file=.env node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -21,6 +21,9 @@
     "prepare": "ts-patch install && typia patch"
   },
   "dependencies": {
+    "@mikro-orm/core": "^6.1.1",
+    "@mikro-orm/nestjs": "^5.2.3",
+    "@mikro-orm/postgresql": "^6.1.1",
     "@nestia/core": "^2.5.4",
     "@nestia/e2e": "^0.4.1",
     "@nestia/fetcher": "^2.5.4",
