--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
+PORT=3000
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=wagg
 POSTGRES_HOST=localhost
+
+OPENWEATHERMAP_API_KEY=api-key
